Don't use Java 11 method